# Qivot

./: .gitignore  CMakeLists.txt  Changelog.txt  Doxyfile  LICENSE.txt  NOTICE.txt  README.md  install.sh  qivot.pro  qt5-qt6-compat.patch
.github/workflows/: ci.yml
cmake/: QivotConfig.cmake.in
docs/: Tutorial1.md  Tutorial2.md  Tutorial3.md  Tutorial4.md  Tutorial5.md
examples/: CMakeLists.txt  README.md  examples.pro
examples/asyncquery/: README.md  asyncquery.pro  main.cpp
examples/contacts/: README.md  contact.h  contacts.pro  contactstore.cpp  contactstore.h  main.cpp  main.qml
examples/dashboard/: README.md  dashboard.pro  dashboardstore.cpp  dashboardstore.h  main.cpp  main.qml  models.h
examples/fluxo/: README.md  fluxo.pro  fluxview.cpp  fluxview.h  main.cpp  main.qml  moc_fluxview.cpp.json  moc_qilistmodel.cpp.json  sample.h
examples/index/: index.pro  main.cpp
examples/infinitescroll/: README.md  infinitescroll.pro  item.h  itemstore.cpp  itemstore.h  main.cpp  main.qml
examples/jsonhttp/: jsonhttp.pro  main.cpp
examples/jsonnested/: README.md  jsonnested.pro  main.cpp
examples/keyset/: README.md  keyset.pro  main.cpp
examples/manytomany/: README.md  librarystore.cpp  librarystore.h  main.cpp  main.qml  manytomany.pro  models.h
examples/migrations/: README.md  main.cpp  migrations.pro
examples/prefetch/: README.md  main.cpp  main.qml  models.h  prefetch.pro  prefetchstore.cpp  prefetchstore.h
examples/qmlmodel/: README.md  main.cpp  main.qml  post.h  poststore.cpp  poststore.h  qmlmodel.pro
examples/reactive/: README.md  main.cpp  main.qml  reactive.pro  task.h  taskstore.cpp  taskstore.h
examples/relations/: README.md  main.cpp  relations.pro
examples/savepoints/: README.md  main.cpp  main.qml  models.h  qml.qrc  sandboxstore.cpp  sandboxstore.h  savepoints.pro
examples/schema/: README.md  main.cpp  schema.pro
examples/tutorial1/: main.cpp  tutorial1.pro
examples/tutorial2/: main.cpp  tutorial2.pro
examples/tutorial3/: main.cpp  tutorial3.pro
examples/tutorial4/: main.cpp  tutorial4.pro
examples/tutorial5/: main.cpp  tutorial5.pro
src/: qiabstractmodel.cpp  qiabstractmodel.h  qiasync.h  qibasefield.cpp  qibasefield.h  qiclause.cpp  qiclause.h  qicolumns.h  qiconnection.cpp  qiconnection.h  qiconnectionpool.h  qierror.h  qiexpression.cpp  qiexpression.h  qifield.cpp  qifield.h  qifieldref.h  qiforeignkey.h  qiftsindex.h  qigadget.h  qiindex.cpp  qiindex.h  qijoin.h  qijsonmapper.cpp  qijsonmapper.h  qijsonrequest.cpp  qijsonrequest.h  qikeyset.h  qilist.h  qilistmodel.cpp  qilistmodel.h  qilistwriter.cpp  qilistwriter.h  qilog.cpp  qilog.h  qimetainfoquery_p.h  qimigrator.cpp  qimigrator.h  qimodel.cpp  qimodel.h  (+27 more)
tests/models/: config.h  misc.h  model1.h  model2.h  model3.h  model4.h  model5.h  user.h
tests/unittests/: coretests.cpp  coretests.h  sqlitetests.cpp  sqlitetests.h  tests.db  unittests  unittests.pro
tools/: amalgamate.py  rebrand.py
